<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/person_list_item_poitrait_id"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/person_list_item_poitrait_id"
        android:layout_alignBottom="@id/person_list_item_poitrait_id"
        android:layout_toRightOf="@id/person_list_item_poitrait_id"
        android:gravity="left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/person_list_item_name_id"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:text="@string/person_list_item_name"
            android:textColor="@color/person_list_item_name_text_color"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/person_list_item_gender_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/person_list_item_gender"
                android:textColor="@color/person_list_item_gender_text_color"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/person_list_item_age_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/person_list_item_age_text"
                android:textColor="@color/person_list_item_age_text_color"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/person_list_item_addr_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:ellipsize="end"
                android:text="@string/person_list_item_addr_text"
                android:textColor="@color/person_list_item_addr_text_color"
                android:textSize="10sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/person_list_item_desc_id"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:textColor="@color/person_list_item_desc_text_color"
            android:textSize="12dp"
            android:text="@string/person_list_item_desc_text" />
    </LinearLayout>

</RelativeLayout>